# djntra

./: .env.example  README.md  manage.py  setup.cfg
djntra/: admin.py  apps.py  models.py
djntra/migrations/: 0001_initial.py
mysite/: settings.py
