[metadata]
name = djntra
version = 2021.07.04
description = A Django based Intranet
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/guettli/djntra
author = Thomas Guettler
author_email = guettliml.djntra@thomas-guettler.de
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Customer Service
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
include_package_data = true
packages = djntra
install_requires = \
    pytest-django
    pytest-mock
    Django

scripts =
    manage.py

